# self-practice-projects

./: LICENSE  README.md
back-end-practice/: README.md
back-end-practice/backend/pfnBackend/: db.sqlite3  manage.py  requirements.txt
back-end-practice/backend/pfnBackend/authentication/: custom_authentication.py  custom_handlers.py  models.py  serializers.py  urls.py  views.py
back-end-practice/backend/pfnBackend/authentication/migrations/: 0001_initial.py
back-end-practice/backend/pfnBackend/pfnBackend/: asgi.py  settings.py  urls.py  wsgi.py
computer-graphics-practice/BVH-whitted-styled-ray-tracing/: BVH.cpp  BVH.hpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp
computer-graphics-practice/bezier/: CMakeLists.txt  main.cpp
computer-graphics-practice/path-tracing/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Scene.cpp
computer-graphics-practice/pipeline-and-shading/: CMakeLists.txt  Shader.hpp  main.cpp  rasterizer.cpp
computer-graphics-practice/rotation-projection/: CMakeLists.txt  main.cpp  rasterizer.hpp
computer-graphics-practice/triangles-and-Z-buffering/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
computer-graphics-practice/whitted-style-ray-tracing/: Renderer.cpp  Triangle.hpp  main.cpp
front-end-practice/: README.md  index.html  script.js  style.css
